# ultrastar-webserver

./: .env  .gitignore  Dockerfile  README.md  app.py  index.py  pyproject.toml
static/: style.css
templates/: index.html
